# sokol_simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
docs/: q_wasm.js  q_wasm.wasm
src/: CMakeLists.txt  main.c  sokol.c
src/simulations/: gol.c  gol.h  ising.c  ising.h  mcpi.c  mcpi.h  none.c  none.h  pendulum.c  pendulum.h  simulations.c  simulations.h
www/: index.html
